--- a/Assignment_04/index.html
+++ b/Assignment_04/index.html
@@ -7,7 +7,7 @@
     <title>JS Profile Card</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container glass">
         <img src="images/declan-sun-nnI25x23mpA-unsplash.jpg" alt="" width="150px" height="150px">
         <h2 id="name-title">Muhammad Saad</h2>
         <p id="name-description">Mern Stack Developer</p>
@@ -17,6 +17,8 @@
             <button type="button" id="change-description">Change Description</button> <br>
             <button id="change-picture">Change Picture</button>
             <button id="change-background">Change Background</button> <br>
+            
+
             <button id="reset">Reset Profile</button> <br>
 
         </div>
